--- a/src/assets/sass/_variable.sass
+++ b/src/assets/sass/_variable.sass
@@ -7,3 +7,7 @@ $card-header-border-color: #f1f1f1
 
 $table-header-background: #f3f3f3
 $table-header-color: #b1b1b1
+
+$primary: #2e2ece
+$success: #0db560
+$danger: #ff4141
